quick and dirty fix for cards alignment for teaInfo

--- a/src/assets/styles/components/main.css
+++ b/src/assets/styles/components/main.css
@@ -3,8 +3,8 @@
 .tt-App-Container {
   display: flex;
   flex-flow: row wrap;
-  align-content: center;
-  justify-content: center;
+  justify-content: space-around;
+  align-items: center;
   min-height: 100vh;
   background-color: #4caf50;
   font-family: "Roboto", "Noto", sans-serif;
@@ -12,11 +12,12 @@
   font-weight: normal;
   color: rgba(0, 0, 0, 0.87);
   margin-bottom: 84px;
+  text-align: center;
 }
 
 @media only screen and (min-width: 768px) {
   .tt-App-Container {
-    margin-bottom: 0px;
+    margin-bottom: 0;
     margin-left: 23.79%;
   }
 }
